<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FieldUnlock</string>
    <string name="title_activity_lock">NFC Lockscreen</string>
    <!-- -->
    <string name="scan_to_unlock_nfc_off">NFC seems to be off. Enter PIN</string>
    <string name="wrong_tag">Wrong NFC Tag</string>
    <string name="wrong_pin">Wrong PIN. Try again</string>
    <string name="pin_locked">PIN locked for 30s. Scan NFC Tag</string>
    <string name="pin_locked_nfc_off">PIN locked for 30s</string>
    <string name="time_text_no_time">13:37</string>
    <string name="date_text_no_date">Mon 4 May</string>
    <string name="battery_text_no_battery">60% Battery</string>
    <string name="battery_text">Battery</string>
    <string name="delete">Delete</string>
    <string name="zero_button_content">Zero</string>
    <string name="one_button_content">One</string>
    <string name="two_button_content">Two</string>
    <string name="three_button_content">Three</string>
    <string name="four_button_content">Four</string>
    <string name="five_button_content">Five</string>
    <string name="six_button_content">Six</string>
    <string name="seven_button_content">Seven</string>
    <string name="eight_button_content">Eight</string>
    <string name="nine_button_content">Nine</string>
    <string name="delete_button_content">Delete</string>
    <string name="wifi_button_content">Wi-Fi</string>
    <string name="mobile_button_content">Mobile data</string>
    <string name="flashlight_button_content">Flashlight</string>
    <string name="brightness_button_content">Brightness</string>
    <string name="speaker_button_content">Sound modes</string>
    <string name="phone_button_content">Phone</string>
    <string name="camera_button_content">Camera</string>
    <string name="up_button_content">Show toolbox</string>
    <string name="down_button_content">Hide toolbox</string>
    <!-- -->
    <string name="pin">PIN: </string>
    <string name="enter_pin_hint">Enter PIN</string>
    <string name="ok_description">Set PIN button</string>
    <string name="nfc_lockscreen">NFC Lockscreen</string>
    <string name="lockscreen_enabled_disabled">Lockscreen</string>
    <string name="lockscreen_enabled">enabled</string>
    <string name="lockscreen_disabled">disabled</string>
    <string name="background_blur_title">NFC Lockscreen background blur</string>
    <string name="background_blur_message">Blur level:</string>
    <string name="background_blur_button_refresh">Refresh wallpaper</string>
    <string name="nfc_tags">NFC Tags</string>
    <string name="no_nfc_tags">Press \'+\' to add Tags</string>
    <!-- -->
    <string name="scan_tag_dialog_title">Scan NFC Tag</string>
    <string name="set_tag_name_dialog_title">NFC Tag name</string>
    <string name="set_tag_name_dialog_hint">Enter NFC Tag name</string>
    <string name="nfc_off_dialog_title">NFC is off</string>
    <string name="nfc_off_dialog_message">NFC seems to be off. Would you like to enable it?
        (\'Yes\' will take you to NFC Settings)</string>
    <string name="rate_app_dialog_title">Rate app</string>
    <string name="rate_app_dialog_message">Open app in Play Store?
        (Thank you for rating! We really appreciate it!)</string>
    <string name="launcher_dialog_title">Select launcher</string>
    <string name="set_pin_confirmation">Are you sure you want to set that PIN?</string>
    <string name="rename_tag_dialog_title">Rename NFC Tag</string>
    <string name="rename_tag_dialog_button">Rename</string>
    <!-- -->
    <string name="yes_button">Yes</string>
    <string name="ok_button">OK</string>
    <string name="no_button">No</string>
    <!-- -->
    <string name="toast_pin_set">PIN successfully set</string>
    <string name="toast_pin_needs4digits">PIN needs to be at least 4 digits long</string>
    <string name="toast_lock_set_pin">You must set a PIN before enabling the lockscreen</string>
    <string name="toast_lock_add_tag">You must add a Tag before enabling the lockscreen</string>
    <string name="toast_lock_enabled">NFC Lockscreen enabled</string>
    <string name="toast_lock_disabled">NFC Lockscreen disabled</string>
    <string name="toast_tag_added">NFC Tag successfully added</string>
    <string name="toast_tag_renamed">NFC Tag successfully renamed</string>
    <string name="toast_tag_deleted">NFC Tag successfully deleted</string>
    <string name="toast_no_flashlight">LED flashlight not found</string>
    <string name="toast_no_mobile_data">Mobile Data not available</string>
    <string name="toast_launcher_dialog">Select \'NFC Lockscreen\' and press \'Always\'
        for maximum security</string>
    <string name="toast_wallpaper_refreshed">Wallpaper successfully refreshed</string>
    <string name="toast_wallpaper_not_refreshed">Wallpaper failed to refresh</string>
    <string name="toast_cannot_blur">Needs Android 4.2 and above</string>
    <string name="toast_camera_failed">Failed to get Camera flashlight</string>
    <string name="toast_phone_open">Unlock to open Phone</string>
    <string name="toast_camera_open">Unlock to open Camera</string>
    <!-- -->
    <string name="notification_text">NFC Lockscreen is enabled</string>
    <!-- -->
    <string name="rename_context_menu">Rename Tag</string>
    <string name="delete_context_menu">Delete Tag</string>
    <string name="delete_context_menu_dialog1">Are you sure you want to delete</string>
    <string name="delete_context_menu_dialog2">Are you sure you want to delete this tag?</string>
    <string name="no_tag_name">Tag</string>
    <string name="long_press_context">Long press to rename or delete</string>
    <string name="new_tag_description">Add new Tag</string>
    <string name="scan_tag_description">Scan NFC Tag Image</string>

</resources>
