<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/scrollView"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingRight="5sp"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:paddingBottom="10sp"
			android:gravity="right"
			>
			<EditText
				android:layout_width="150sp"
				android:layout_height="wrap_content"
				android:inputType="numberPassword"
				android:ems="10"
				android:id="@+id/pin_edit"
				android:layout_gravity="center_vertical"
				android:maxLength="64"
				android:hint="@string/enter_pin_hint"
				android:gravity="center"
				/>
			<ImageButton
				android:id="@+id/pin_ok"
				android:layout_width="48sp"
				android:layout_height="48sp"
				android:scaleType="centerInside"
				android:text="@string/pin_ok"
				android:background="@null"
				android:src="@drawable/ic_store"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10sp"
			android:gravity="right"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/lockscreen_enabled_disabled"
				android:layout_gravity="center_vertical"
				android:id="@+id/lockscreen_enabled_disabled"
				android:paddingRight="5sp"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				android:text="@string/lockscreen_disabled"
				android:id="@+id/enabled_disabled"
				android:paddingRight="7sp"
				/>
			<Switch
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/toggle"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10sp"
			android:gravity="right"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical"
				tools:text="15"
				android:id="@+id/background_blur_value"
				/>
			<SeekBar
				android:layout_width="200dp"
				android:layout_height="wrap_content"
				android:id="@+id/seek_bar"
				android:layout_gravity="center_vertical"
				android:max="25"
				android:progress="15"
				/>
			<ProgressBar
				android:layout_width="wrap_content"
				android:layout_gravity="center_vertical"
				android:layout_height="wrap_content"
				android:id="@+id/progress_bar"
				android:indeterminate="true"
				android:visibility="gone"
				/>
			<ImageButton
				android:id="@+id/refresh_wallpaper"
				android:layout_width="48sp"
				android:layout_height="48sp"
				android:scaleType="centerInside"
				android:text="@string/background_blur_button_refresh"
				android:background="@null"
				android:src="@drawable/ic_refresh"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10sp"
			android:gravity="right"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/nfc_tags"
				android:layout_gravity="center_vertical"
				android:id="@+id/NFCTagTitle"
				android:textStyle="bold"
				/>
			<ImageButton
				android:id="@+id/newTag"
				android:layout_width="48sp"
				android:layout_height="48sp"
				android:scaleType="centerInside"
				android:background="@null"
				android:src="@drawable/ic_plus"
				android:contentDescription="@string/new_tag_description"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingBottom="10sp"
			>
			<ListView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:id="@+id/listView"
				android:drawSelectorOnTop="true"
				android:dividerHeight="3sp"
				android:divider="@null"
				/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/no_nfc_tags"
				android:id="@+id/noTags"
				android:visibility="invisible"
				/>
		</LinearLayout>
	</LinearLayout>
</ScrollView>
