<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:id="@+id/lockRelativeLayout"
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:background="@color/black_25"
	>
	<TextView
		android:id="@+id/time"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/time_text_no_time"
		android:textColor="@color/white"
		android:textSize="44sp"
		/>
	<TextView
		android:id="@+id/date"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceMedium"
		android:text="@string/date_text_no_date"
		android:textColor="@color/white"
		/>
	<TextView
		android:id="@+id/battery"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:text="@string/battery_text_no_battery"
		android:textColor="@color/white_90"
		/>
	<TextView
		android:id="@+id/unlockText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="@color/white_90"
		/>
	<TextView
		android:id="@+id/pinInput"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:textAppearance="?android:attr/textAppearanceSmall"
		android:textColor="@color/white_90"
		android:gravity="center"
		android:maxLength="8"
		android:numeric="integer"
		/>
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:orientation="vertical"
		>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal"
			>
			<ImageButton
				android:id="@+id/ic_0"
				android:src="@drawable/ic_0"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_1"
				android:src="@drawable/ic_1"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_2"
				android:src="@drawable/ic_2"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_3"
				android:src="@drawable/ic_3"
				style="@style/pinbutton"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal"
			>
			<ImageButton
				android:id="@+id/ic_4"
				android:src="@drawable/ic_4"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_6"
				android:src="@drawable/ic_6"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_5"
				android:src="@drawable/ic_5"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_7"
				android:src="@drawable/ic_7"
				style="@style/pinbutton"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal"
			>
			<ImageButton
				android:id="@+id/ic_8"
				android:src="@drawable/ic_8"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_9"
				android:src="@drawable/ic_9"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_a"
				android:src="@drawable/ic_a"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_b"
				android:src="@drawable/ic_b"
				style="@style/pinbutton"
				/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal"
			>
			<ImageButton
				android:id="@+id/ic_c"
				android:src="@drawable/ic_c"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_d"
				android:src="@drawable/ic_d"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_e"
				android:src="@drawable/ic_e"
				style="@style/pinbutton"
				/>
			<ImageButton
				android:id="@+id/ic_f"
				android:src="@drawable/ic_f"
				style="@style/pinbutton"
				/>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>
